# fractalistic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  ruff.toml  test-truecolor.sh
.github/: FUNDING.yml
.github/workflows/: docs_deploy.yml  greeting.yml  pr_checks.yml  pypi_publish.yml
cool_locations/: 1.fc  info.txt
docs/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: Layout.vue  index.js
docs/src/: color-issues.md  contributing.md  creating-a-pull-request.md  getting-started.md  index.md  navigation.md  presentation.md  project-setup.md  recommended-ide-setup.md  screenshots.md  the-command-system.md  the-logs-panel.md
fractalistic/: __init__.py  __main__.py  app.py  app.tcss  click_modes.py  colors.py  command.py  fractal_canv.py  line_divergence_result.py  main.py  query_config.py  settings.py  utils.py  vec.py  version.py
fractalistic/fractals/: __init__.py  burning_ship.py  fractal_base.py  julia.py  mandelbrot.py
src/fractalistic/: __init__.py  __main__.py  app.py  click_modes.py  colors.py  command.py  fractal_canv.py  line_divergence_result.py  settings.py  utils.py  vec.py
src/fractalistic/fractals/: __init__.py  burning_ship.py  fractal_base.py  inv_mandel.py  julia.py  mandelbrot.py
