[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fractalistic"
authors = [{name = "Leopold Koprivnik", email = "skwal@etik.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]


dependencies = [
    "textual==0.38.1",
    "click_extra==4.7.1",
    "gmpy2==2.1.5",
    "pillow==10.0.1",
    "asyncio==3.4.3",
    "textual_canvas==0.2.0"
]

[project.urls]
Repository = "https://github.com/SkwalExe/fractalistic"
Changelog = "https://github.com/SkwalExe/fractalistic/blob/main/CHANGELOG.md"

[project.scripts]
fractalistic = "fractalistic.__main__:main"
